Fixed 2D graph targeting bug and added 10k object limit